--- a/src/main/resources/templates/household/show.html
+++ b/src/main/resources/templates/household/show.html
@@ -1,4 +1,13 @@
-<div th:fragment="content">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/base}">
+<head>
+    <title>Household Info</title>
+</head>
+<body >
+<!-- base.html의 content 영역에 이 부분이 삽입됩니다 -->
+<div layout:fragment="content">
     <h2>Dashboard</h2>
     <table class="table table-striped table-hover">
         <thead>
@@ -16,9 +25,12 @@
             <td th:text="${householdinfo.ledSensorGbn ?: '데이터 없음'}"></td>
             <td th:text="${#temporals.format(householdinfo.regDt, 'yyyy-MM-dd HH:mm:ss')}"></td>
         </tr>
+
         <tr th:if="${householdinfo == null or householdinfo.id == null}">
             <td colspan="4">데이터가 존재하지 않습니다.</td>
         </tr>
         </tbody>
     </table>
 </div>
+</body>
+</html>
