--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet" />
+    <!-- Bootstrap Icons도 쓰신다면 추가로 로드 필요 -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 </head>
 <body>
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <!-- Sidebar -->
+        <!-- 사이드바 -->
         <div th:replace="layouts/sidebar :: sidebarFragment"></div>
 
-        <!-- Main Content Area -->
+        <!-- 메인 컨텐츠 영역 -->
         <div class="col py-3">
-            <div th:replace="~{::content}"></div>
+            <!-- 자식 템플릿의 content fragment가 들어가는 자리 -->
+            <div layout:fragment="content"></div>
         </div>
     </div>
 </div>
 
-<!-- Footer -->
+<!-- 푸터 -->
 <div th:replace="layouts/footer :: footerFragment"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
