feat: iot 장치 현황 불러오기 구현

--- a/src/main/resources/templates/household/list.html
+++ b/src/main/resources/templates/household/list.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" th:href="@{/css/pagination.css}">
 </head>
 
-<div class="table-container">
+<div th:fragment="listFragment" class="table-container">
     <table class="table table-hover">
         <thead>
         <tr>
